EPMD default port clarified.

--- a/doc/us-common-technical-manual-english.rst.template
+++ b/doc/us-common-technical-manual-english.rst.template
@@ -149,7 +149,11 @@ In practice, often the ``~/.config/universal-server/us.config`` location is pref
 
 All US configuration files are in the `ETF <http://myriad.esperide.org/#etf>`_ format (for *Erlang Term Format*).
 
+
 One may refer to `this example us.config <https://github.com/Olivier-Boudeville/us-common/blob/master/priv/conf/us.config>`_ to learn their structure and derive one's own ``us.config``.
+
+Note that the US default EPMD port is ``4506``, yet generally each US-* service tends to define its own, non-colliding default EPMD port, so that each of them can have its EPMD daemon restarted without interfering with the others.
+
 
 
 Client Configuration
