--- a/priv/conf/us.config
+++ b/priv/conf/us.config
@@ -19,7 +19,9 @@
 { vm_cookie, 'e08a-4fa2-bcb5-6b44edbd603b-test' }.
 
 
-% The EPMD TCP port to be used for the Erlang VMs (default: 4369):
+% The EPMD TCP port to be used for the US VMs (Erlang default: 4369):
+% (note though that most US-* services will define their own default EPMD port)
+%
 { epmd_port, 4506 }.
 
 
