--- a/ebin/GNUmakefile
+++ b/ebin/GNUmakefile
@@ -1,5 +1,5 @@
 US_COMMON_TOP = ..
 
-# Mostly so that ebin is known of GIT.
+# Mostly so that ebin is known of Git.
 
 include $(US_COMMON_TOP)/GNUmakesettings.inc
